peridot: overlay: Improve status bar padding
Change-Id: I8c3ffd5f615c699c1f8b109f877e279ea5148b14

--- a/overlay/SystemUIOverlayPeridot/res/values/config.xml
+++ b/overlay/SystemUIOverlayPeridot/res/values/config.xml
@@ -20,4 +20,6 @@
     <!-- Whether to disable Smart Pixels on UDFPS -->
     <bool name="config_disableSmartPixelsOnUDFPS">true</bool>
 
+    <!-- The padding on the start of the statusbar -->
+    <dimen name="status_bar_padding_start">36px</dimen>
 </resources>
